tests/integration/security/test_artifacts/security-a995fce91cf649b097c94d/TestSimpleTlsOrigination/missing_secret/_test_context/DestinationRule.299480545.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-tls-for-server-sds-tls-credential-not-created-cacert
spec:
  host: "external.external-4-16320.svc.cluster.local"
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: SIMPLE
          credentialName: tls-credential-not-created-cacert
          sni: external.external-4-16320.svc.cluster.local
